--- a/css/pag1.css
+++ b/css/pag1.css
@@ -1,25 +1,32 @@
-.containerItem1{
-    grid-area: item1;
-}
-.containerItem2{
-    grid-area: item2;
-}
-.containerItem3{
-    grid-area: item3;
-}
-.containerItem4{
-    grid-area: item4;
-}
-.containerItem5{
-    grid-area: item5;
-}
-#container{
+
+#container1{
     display: grid;
-    grid-template-areas: "item1 item2 item2 "
-                         "item3 item4 item5" ;
-    grid-template-columns: 1fr 1fr ;                     
+    grid-template-areas: "item1 item2 item2"
+    "item3 item4 item5";
+    grid-gap: 20px;
 }
-.col{
-    background-color: blue;
+.gridContainer1{
+   
+   grid-area: item1;
+}
+.gridContainer2{
+   
+    grid-area: item2;
+ }
+ .gridContainer3{
+   
+    grid-area: item3;
+ }
+ .gridContainer4{
+    
+    grid-area: item4;
+ }
+ .gridContainer5{
+    
+    grid-area: item5;
+ }
+ .col{
+    background-color: darkblue;
     margin: 10px;
-}
+ }
+
